# SkillBox-practice

./: .gitignore
С++/Практика №10.4/: discrim.cpp
С++/Практика №11.6/Задание 1/: ceasar.cpp
С++/Практика №11.6/Задание 2/: checkingEmailCorrectness.cpp
С++/Практика №11.6/Задание 3/: validationIP.cpp
С++/Практика №11.6/Задание 4/: evaluationResultsTTTGame.cpp
С++/Практика №12.5/Задание 1/: apartmentBuilding.cpp
С++/Практика №12.5/Задание 2/: sort.cpp
С++/Практика №12.5/Задание 3/: useAssert.cpp
С++/Практика №12.5/Задание 4/: seriesNumbers.cpp
С++/Практика №13.6/Задание 1/: delNumbers.cpp
С++/Практика №13.6/Задание 2/: productPrices.cpp
С++/Практика №13.6/Задание 3/: ring.cpp
С++/Практика №14.6/Задание 1/: banquetTable.cpp
С++/Практика №14.6/Задание 2/: ticTacToe.cpp
С++/Практика №14.6/Задание 3/: matrices.cpp
С++/Практика №14.6/Задание 4/: multiMatVec.cpp
С++/Практика №14.6/Задание 5/: pupyrka.cpp
С++/Практика №14.6/Задание 6/: snakePassage.cpp
С++/Практика №14.6/Задание 7/: almostMinecraft.cpp
С++/Практика №14.6/Задание 8/: battleship.cpp
С++/Практика №15.6/Задание 1/: task1.cpp
С++/Практика №15.6/Задание 2/: task2.cpp
С++/Практика №15.6/Задание 3/: task3.cpp
С++/Практика №15.6/Задание 4/: task4.cpp
С++/Практика №16.4/Задание 1/: speedometer.cpp
С++/Практика №16.4/Задание 2/: stapler.cpp
С++/Практика №16.4/Задание 3/: calculator.cpp
С++/Практика №16.4/Задание 4/: mechanicalPiano.cpp
С++/Практика №16.4/Задание 5/: smartHome.cpp
С++/Практика №17.4/Задание 1/: task1.cpp
С++/Практика №17.4/Задание 3/: task3.cpp
С++/Практика №17.4/задание 2/: task2.cpp
С++/Практика №18.5/Задание 1/: task1.cpp
С++/Практика №18.5/Задание 2/: task2.cpp
С++/Практика №18.5/Задание 3/: task3.cpp
С++/Практика №18.5/Задание 4/: task4.cpp
С++/Практика №19.5/Задание 1/: searchWords.cpp  words.txt
С++/Практика №19.5/Задание 2/: textFileViewer.cpp
С++/Практика №19.5/Задание 3/: statement.cpp
С++/Практика №19.5/Задание 4/: filePNG.cpp
С++/Практика №19.5/Задание 5/: whatWhereWhen.cpp
С++/Практика №20.5/Задание 1/: statement2.cpp
С++/Практика №20.5/Задание 2/: drawRandPic.cpp
С++/Практика №20.5/Задание 3/: fishing.cpp
С++/Практика №20.5/Задание 4/: atm.cpp
С++/Практика №21.5/Задание 1/: statement3.cpp
С++/Практика №21.5/Задание 2/: village.cpp
С++/Практика №21.5/Задание 3/: matVector.cpp
С++/Практика №21.5/Задание 4/: gameTBRPG.cpp  save.txt
С++/Практика №22.5/Задание 1/: telephoneDirectory.cpp
С++/Практика №22.5/Задание 2/: registry.cpp
С++/Практика №22.5/Задание 3/: anagrams.cpp
С++/Практика №23.4/Задание 1/: weekday.cpp
С++/Практика №23.4/Задание 2/: season.cpp
С++/Практика №23.4/Задание 3/: occupancyAnalysis.cpp
С++/Практика №24.5/Задание 1/: timeTracking.cpp
С++/Практика №24.5/Задание 2/: birthdayReminders.cpp
С++/Практика №24.5/Задание 3/: timer.cpp
С++/Практика №25.4/Задание 1/simulator of operations/src/: CMakeLists.txt  simulatorOfOperations.cpp
С++/Практика №25.4/Задание 2/computerOperationSimulator/computerOperationSimulator/: CMakeLists.txt  cpu.h  disk.h  gpu.h  kbd.h  ram.h
С++/Практика №25.4/Задание 2/computerOperationSimulator/computerOperationSimulator/src/: CMakeLists.txt  main.cpp
С++/Практика №26.4/Задание 1/: audioplayer.cpp
С++/Практика №26.4/Задание 2/: mobile.cpp
С++/Практика №26.4/Задание 3/: desktop.cpp
С++/Практика №27.4/Задание 1/: village.cpp
С++/Практика №27.4/Задание 2/: geometry.cpp
С++/Практика №27.4/задание 3/: companyWork.cpp
С++/Практика №28.4/Задание 1/: swimming.cpp
С++/Практика №28.4/Задание 2/: railwayStation.cpp
С++/Практика №28.4/Задание 3/: kitchen.cpp
С++/Практика №29.4/Задание 1/: superDog.cpp
С++/Практика №29.4/Задание2/: figure.cpp
С++/Практика №30.4/Arguments/Arguments/: CMakeLists.txt
С++/Практика №30.4/Arguments/Arguments/src/: Arguments.cpp
С++/Практика №30.4/UserRequests/: CMakeLists.txt
С++/Практика №30.4/UserRequests/UserRequests/: CMakeLists.txt  delete.h  get.h  patch.h  post.h  put.h
С++/Практика №30.4/UserRequests/UserRequests/src/: UserRequests.cpp
С++/Практика №30.4/titleCapture/titleCapture/: CMakeLists.txt
С++/Практика №30.4/titleCapture/titleCapture/src/: titleCapture.cpp
С++/Практика №32.5/Задание 1/film/: CMakeLists.txt  film.cpp
С++/Практика №34.5/CMakeProject1/: CMakeLists.txt
(+78 files in other folders)
